# ISU-Graphics

./: README.md
code/Assignment1/src/: CMakeLists.txt
code/Assignment1/src/shader/: cyan.frag  green.frag  triangles1.vert  trianglesQ2.vert
code/Assignment1/src/source/: Assignment1A.cpp  Part2.cpp
code/Assignment2/: asg02_submission.docx
code/Assignment2/Assignment2/src/: CMakeLists.txt
code/rec1/: recitation1.docx
code/rec1/part1/src/: CMakeLists.txt
code/rec1/part2/src/: CMakeLists.txt
code/rec1/part2/src/source/: recPart2.cpp
code/rec1/part2/src/source - Copy/: example2_lec02-mine.cpp
code/rec2/: recitation2.docx
code/rec2/src/: CMakeLists.txt
code/rec2/src/shader/: fshaderTwoShaders2.glsl  fshaderTwoShaders3.glsl  fshaderTwoShaders5.glsl  fshaderTwoVAOs.glsl
code/rec2/src/source/: rec2part1.cpp  rec2part2.cpp
code/rec3/recitation03_examples/: Recitation3.docx
code/rec3/recitation03_examples/src/: CMakeLists.txt
week10/week10_exp1/src/: CMakeLists.txt
week10/week10_exp1/src/source/: example1.cpp  example2.cpp
week11/week11_exp1/src/: CMakeLists.txt
week11/week11_exp1/src/source/: example1.cpp  example2.cpp  example3.cpp
week11/week11_exp2/src/: CMakeLists.txt
week11/week11_exp2/src/shader/: texture2.vert  texture3.frag
week11/week11_exp2/src/source/: example1.cpp  example2.cpp  example3.cpp
week12/week12_exp1/src/: CMakeLists.txt
week12/week12_exp1/src/include/: camera.h
week12/week12_exp1/src/shader/: 1.lamp.frag
week12/week12_exp1/src/source/: example1.cpp
week12/week12_exp2/src/: CMakeLists.txt
week12/week12_exp2/src/shader/: 2.2.1.basic_lighting.frag  2.2.2.basic_lighting.frag  2.2.3.basic_lighting.frag
week12/week12_exp2/src/source/: example1.cpp  example2.cpp  example3.cpp
week13/exam_q10/src/: CMakeLists.txt
week13/exam_q10/src/shader/: texture0.frag  texture0.vert
week13/exam_q10/src/source/: example0.cpp
week13/week11_exp1/src/: CMakeLists.txt
week13/week11_exp1/src/shader/: texture2.frag
week13/week11_exp1/src/source/: example2.cpp
week13/week13_exp1/src/: CMakeLists.txt
week13/week13_exp1/src/common/: loadShaders.cpp
week13/week13_exp1/src/include/: camera.h
week13/week13_exp1/src/shader/: 2.2.3.basic_lighting.frag  2.2.3n.basic_lighting.frag  2.2.3n2.basic_lighting.frag  3.1.materials.frag  3.1.materials.vert
week13/week13_exp1/src/source/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
week13/week13_exp2/src/: CMakeLists.txt
week13/week13_exp2/src/shader/: 4.2.lamp.frag  4.2.lighting_maps.frag
week13/week13_exp2/src/source/: example1.cpp  example2.cpp
week14/week14_exp1/src/: CMakeLists.txt
week14/week14_exp1/src/shader/: 5.1a.lamp.frag  5.1a.light_casters.frag  5.2.light_casters.frag  5.3.light_casters.frag  5.4.light_casters.frag  lighting_maps1b.frag  lighting_maps1c.frag
week14/week14_exp1/src/source/: example1a.cpp  example1b.cpp  example1c.cpp  example2.cpp  example3.cpp  example4.cpp
week2/src/: CMakeLists.txt
week2/src/common/: InitShader.cpp
week2/src/source/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example4b.cpp  example5.cpp  simpleCode1.cpp
week2/zip1/week02_lec02_1/src/: CMakeLists.txt
week2/zip2/week02_lec02_2/src/: CMakeLists.txt
week2/zip2/week02_lec02_2/src/source/: example2_lec02.cpp
week2/zip3/week02_lec02_3/src/: CMakeLists.txt
week3/week03_lec1_ex1/src/: CMakeLists.txt
week3/week03_lec1_ex1/src/common/: InitShader.cpp
week3/week03_lec1_ex1/src/include/: Angel.h  vec.h
week3/week03_lec1_ex1/src/shader/: fshader01.glsl  vshader01.glsl
week3/week03_lec1_ex1/src/source/: example1.cpp
week4/week04_lec01_ex1/src/: CMakeLists.txt
week4/week04_lec01_ex1/src/common/: loadShaders.cpp
week4/week04_lec01_ex1/src/include/: loadShaders.h
week4/week04_lec01_ex1/src/source/: example0.cpp
week4/week04_lec02/src/: CMakeLists.txt
week4/week04_lec02/src/common/: loadShaders.cpp
week4/week04_lec02/src/source/: example2.cpp
week5/week05_lec01a/src/: CMakeLists.txt
week5/week05_lec01a/src/shader/: fshaderEBO.glsl
week5/week05_lec01a/src/source/: example2.cpp  exampleEBO.cpp
week5/week05_lec01b/src/: CMakeLists.txt
week5/week05_lec01b/src/shader/: vshaderTwoVAOs.glsl
week5/week05_lec01b/src/source/: exampleTwoShaders.cpp  exampleTwoVAOs.cpp
week5/week05_lec02a/src/: CMakeLists.txt
week5/week05_lec02a/src/shader/: fshader_w05lec2a1.glsl  fshader_w05lec2a2.glsl  vshader_w05lec2a1.glsl
week5/week05_lec02a/src/source/: example3.cpp  example4.cpp
week6/week06_lec1/src/: CMakeLists.txt
week6/week06_lec1/src/shader/: triangles1.frag  triangles2.vert
week6/week06_lec1/src/source/: example1.cpp
week6/week06_lec1a/src/: CMakeLists.txt
week6/week06_lec1a/src/shader/: fshader_week06_lec1a2.glsl  fshader_week06_lec1a3.glsl  vshader_week06_lec1a1.glsl  vshader_week06_lec1a2.glsl  vshader_week06_lec1a3.glsl
week6/week06_lec1a/src/source/: example1a1.cpp  example1a2.cpp  example1a3.cpp
week6/week06_lec1b/src/: CMakeLists.txt
week6/week06_lec1b/src/shader/: fshader_week06_lec1d.glsl  vshader_week06_lec1b.glsl  vshader_week06_lec1c.glsl  vshader_week06_lec1d.glsl
week6/week06_lec1b/src/source/: example2.cpp  example3.cpp  example4.cpp
week6/week06_lec2a/src/: CMakeLists.txt  resources - Shortcut.lnk
week6/week06_lec2a/src/shader/: fshader.glsl
week6/week06_lec2a/src/source/: example0.cpp  example1.cpp
week7/week07_exp1/src/: CMakeLists.txt
week7/week07_exp1/src/shader/: texture1.frag
week7/week07_exp1/src/source/: example0.cpp  example1.cpp
week7/week07_exp2/src/: CMakeLists.txt
week7/week07_exp2/src/shader/: texture1b.frag
week7/week07_exp2/src/source/: example0.cpp  example1.cpp
week7/week07_exp3/src/: CMakeLists.txt
week7/week07_exp3/src/shader/: texture0.frag  texture2.frag
week7/week07_exp3/src/source/: example0.cpp  example1.cpp  example2.cpp
week8/week08_exp1/src/: CMakeLists.txt
week8/week08_exp1/src/cmake/: FindGLM.cmake
week8/week08_exp1/src/source/: example0.cpp
week8/week08_exp2/src/: CMakeLists.txt
week8/week08_exp2/src/source/: example0.cpp  example1.cpp
(+15 files in other folders)
